fixing sphere visiblity

--- a/style.css
+++ b/style.css
@@ -137,14 +137,6 @@ nav .container .icon img{
     height: 100%;
 }
 
-/* sphere */
-.sphere{
-    height: 33vh;
-}
-.model{
-    z-index: 99;
-}
-
 /* main */
 main{
     position: relative;
@@ -179,7 +171,26 @@ main .container section.hero .line{
 }
 
 /* model */
-.model{
-    z-index: 99;
-    position: absolute;
+/* Add these styles to your existing CSS */
+
+.sphere {
+    height: 33vh;
+    position: relative;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.model {
+    width: 100%;
+    height: 100%;
+    position: relative;
+    z-index: 1;
+}
+
+.model canvas {
+    display: block;
+    width: 100% !important;
+    height: 100% !important;
 }
